# openwhoop-tray

./: .gitmodules  README.md  package.json  pnpm-lock.yaml
docs/: TECHNICAL_REFERENCE.md
src/: App.css  App.tsx  HistoryView.tsx  Hypnogram.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
